legal sentences layout + fix layout on mobile simulation section

--- a/assets/CSS/media queries/style.css
+++ b/assets/CSS/media queries/style.css
@@ -128,6 +128,7 @@
     flex-direction: column;
     align-items: center;
     row-gap: 48px;
+    padding-right: 6.1%;
   }
 
   .footer-container {
@@ -149,6 +150,10 @@
     flex-direction: row;
     column-gap: 20vw;
     margin-bottom: 64px;
+  }
+  .legal {
+    align-items: start;
+    text-align: left;
   }
 }
 
